--- a/style.css
+++ b/style.css
@@ -1,17 +1,42 @@
+body{
+    font-family: "Raleway";
+    /*margin-left: 15vw;
+    margin-right: 15vw;*/
+}
+
+h1{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+#container{
+    display: inline-block;
+    padding-left: 25vw;
+}
+
+p{
+    width: auto;
+}
+
 table, td, th {
     border: 1px solid black;
 }
 
 table {
     border-collapse: collapse;
+    border: 3px;
     margin: 20px;
+    font-size: 17px;
 }
 
 td{
-    /*padding: 7px;*/
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     text-align: center;
+    font-weight: 1000;
+    /*background-image: url("flag.jpg");*/
+    background-repeat: no-repeat;
+    background-size: 21px 21px;
 }
 
 #restart{
