--- a/style.css
+++ b/style.css
@@ -80,3 +80,17 @@ td{
                                   supported by Chrome and Opera */
 }
 
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #135446;
+    color: #8fbab1;
+    text-align: center;
+}
+
+#myName{
+    color: white;
+    text-decoration: none;
+}
