change font family in matrix

--- a/minesweeper/stylesheets/style.css
+++ b/minesweeper/stylesheets/style.css
@@ -48,7 +48,8 @@ table {
     border-collapse: collapse;
     border: 3px;
     margin: 20px;
-    font-size: 17px;
+    font-family: Arial;
+    font-size: 14px;
 }
 
 td{
